# pr-ok-action

./: .pre-commit-config.yaml  Dockerfile  README.md  container-entrypoint.sh  pyproject.toml  setup.cfg
repok/: cli.py
