[tool.poetry]
name = "pr-ok-action"
version = "0.1.0"
description = "GitHub Action to ensure PRs meet requirements"
authors = ["Dave Forgac <tylerdave@tylerdave.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
